--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cheerio": "^1.1.2",
+    "express": "^5.1.0",
     "lucide-react": "0.424.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.26.2"
+    "react-router-dom": "6.26.2",
+    "undici": "^7.16.0",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
-    "@types/node": "20.14.11",
+    "@types/express": "^5.0.3",
+    "@types/node": "^20.14.11",
     "@types/react": "18.2.66",
     "@types/react-dom": "18.2.22",
     "@vitejs/plugin-react": "^5.0.4",
