--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "axios": "^1.12.2",
     "cheerio": "^1.1.2",
     "express": "^5.1.0",
+    "hls.js": "^1.6.13",
     "lucide-react": "0.424.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.26.2",
     "undici": "^7.16.0",
+    "uuid": "^13.0.0",
     "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
@@ -30,6 +32,6 @@
     "postcss": "8.4.38",
     "tailwindcss": "3.4.10",
     "typescript": "5.4.5",
-    "vite": "^5.4.2"
+    "vite": "^5.4.20"
   }
 }
