--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.3",
+    "@vitejs/plugin-react": "^5.0.4",
     "axios": "^1.12.2",
     "cheerio": "^1.1.2",
     "express": "^5.1.0",
@@ -18,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-router-dom": "6.26.2",
     "undici": "^7.16.0",
+    "vite": "^5.4.2",
     "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
@@ -25,11 +27,9 @@
     "@types/node": "^20.14.11",
     "@types/react": "18.2.66",
     "@types/react-dom": "18.2.22",
-    "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "10.4.19",
     "postcss": "8.4.38",
     "tailwindcss": "3.4.10",
-    "typescript": "5.4.5",
-    "vite": "^5.4.2"
+    "typescript": "5.4.5"
   }
 }
